--- a/src/posts/0.md
+++ b/src/posts/0.md
@@ -1,20 +1,12 @@
 ---
-title: TEST!
-thumbnail: https://images.unsplash.com/photo-1529236183275-4fdcf2bc987e
+layout: layouts/post.njk
 date: 2018-05-01
 updated: 2022-01-16
+title: This is my first post
+description: This is a post on My Blog about agile frameworks.
+image: https://images.unsplash.com/photo-1533577116850-9cc66cad8a9b
 tags:
-  - Tag0
-  - Tag1
-  - Tag2
-  - Tag3
-  - Tag4
-  - Tag5
-  - Tag6
-  - Tag7
-  - Tag8
-  - Tag9
-layout: layouts/post.njk
+  - test
 ---
 
 Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
