Added tags data

--- a/src/posts/0.md
+++ b/src/posts/0.md
@@ -2,10 +2,19 @@
 title: This is my first post
 description: This is a post on My Blog about agile frameworks.
 tags:
-  - test
+  - update
+  - story
+  - game_dev
+  - web_dev
+  - tty
+  - os_rice
+  - input_device
+  - ruby
+  - rust
+  - godot
 date: 2018-05-01
 updated: 2022-01-16
-image: https://images.unsplash.com/photo-1533577116850-9cc66cad8a9b
+image: https://images.unsplash.com/photo-1533577116850-9cc66cad8a9b?w=1280
 ---
 
 Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
