--- a/src/posts/0.md
+++ b/src/posts/0.md
@@ -17,6 +17,8 @@ updated: 2022-01-16
 image: https://images.unsplash.com/photo-1533577116850-9cc66cad8a9b?w=1280
 ---
 
+<script id="asciicast-533350" src="https://asciinema.org/a/533350.js" async></script>
+
 Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
 
 Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.
