--- a/src/posts/0.md
+++ b/src/posts/0.md
@@ -14,7 +14,7 @@ tags:
   - godot
 date: 2018-05-01
 updated: 2022-01-16
-image: https://images.unsplash.com/photo-1533577116850-9cc66cad8a9b?w=1280
+image: https://images.unsplash.com/photo-1533577116850-9cc66cad8a9b
 ---
 
 <script id="asciicast-533350" src="https://asciinema.org/a/533350.js" async></script>
