--- a/src/posts/0.md
+++ b/src/posts/0.md
@@ -1,6 +1,10 @@
 ---
-title: This is my first post
-description: This is a post on My Blog about agile frameworks.
+title:
+  en: This is my first post
+  vi: Post đầu tay
+description:
+  en: This is a post on My Blog about agile frameworks
+  vi: bla bla Tiếng Việt
 tags:
   - update
   - story
