Fixed most of i18n stuff...

--- a/src/posts/0.md
+++ b/src/posts/0.md
@@ -1,10 +1,6 @@
 ---
-title:
-  en: This is my first post
-  vi: Post đầu tay
-description:
-  en: This is a post on My Blog about agile frameworks
-  vi: bla bla Tiếng Việt
+title: This is my first post
+description: This is a post on My Blog about agile frameworks
 tags:
   - update
   - story
