--- a/src/posts/0.md
+++ b/src/posts/0.md
@@ -12,6 +12,7 @@ tags:
   - ruby
   - rust
   - godot
+  - svelte
 date: 2018-05-01
 updated: 2022-01-16
 image: https://images.unsplash.com/photo-1533577116850-9cc66cad8a9b
