Grinded PageSpeed Insights

--- a/src/posts/0.md
+++ b/src/posts/0.md
@@ -1,40 +1,16 @@
 ---
-title: This is my first post
-description: This is a post on My Blog about agile frameworks
+title:
+  en: "*First post!"
+  vi: Blog post "đầu tiên"!
+description:
+  en: Made with 11ty and DaisyUI
+  vi: Khai bút đầu năm bằng 11ty và DaisyUI
 tags:
   - update
-  - story
-  - game_dev
-  - web_dev
-  - tty
-  - os_rice
-  - input_device
-  - ruby
-  - rust
-  - godot
-  - svelte
-date: 2018-05-01
-updated: 2022-01-16
-image: https://images.unsplash.com/photo-1533577116850-9cc66cad8a9b
+date: 2023-01-22
+image: https://images.unsplash.com/photo-1673365082385-b7150ac19454
 ---
 
-<script id="asciicast-533350" src="https://asciinema.org/a/533350.js" async></script>
+# #TODO
 
-Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
-
-Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.
-
-## Section Header
-
-Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.
-
-```diff-js
- // this is a command
- function myCommand() {
-+	let counter = 0;
-+	counter++;
- }
-
- // Test with a line break above this line.
- console.log('Test');
-```
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae beatae cupiditate voluptates molestias a possimus totam amet quisquam distinctio! Quae asperiores quisquam sequi ipsam delectus sed atque labore tenetur adipisci?
