--- a/src/posts/0.md
+++ b/src/posts/0.md
@@ -3,14 +3,85 @@ title:
   en: "*First post!"
   vi: Blog post "đầu tiên"!
 description:
-  en: Made with 11ty and DaisyUI
-  vi: Khai bút đầu năm bằng 11ty và DaisyUI
+  en: Made with 11ty
+  vi: Khai bút đầu năm bằng 11ty
 tags:
   - update
+  - web_dev
 date: 2023-01-22
-image: https://images.unsplash.com/photo-1673365082385-b7150ac19454
+image: https://images.unsplash.com/photo-1674240660273-a3496c4604fd
 ---
 
-# #TODO
+## Hello, World!
 
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae beatae cupiditate voluptates molestias a possimus totam amet quisquam distinctio! Quae asperiores quisquam sequi ipsam delectus sed atque labore tenetur adipisci?
+{% if lang == 'vi' %}
+  Xin chào mọi người, chào mừng đến với trang blog của mình! Đây không hẳn là lần đầu mình viết blog, trước đây mình đã viết một số bài linh tinh trên [Đotfiles](https://github.com/NNBnh/dotfiles/wiki) của mình. Nhưng NNBlog là một khởi đầu mới, minh đã xây dựng một trang web riêng cho việc viết blog. Trong khoảng thời gian tới mình sẽ đan xen viết các bài blog nhỏ và chuyển các bài từ Dotfiles sang trang này bằng cả tiếng Anh lẫn tiếng Việt.
+{% else %}
+  Welcome to my blog! This isn't really my first time blogging, I've written some articles on my [Đotfiles](https://github.com/NNBnh/dotfiles/wiki)'s wiki before, but NNBlog is a fresh start. In the coming month, I will copy most articles from the Dotfiles to this site.
+{% endif %}
+
+{% if lang == 'vi' %}
+  ## Mặt kĩ thuật
+
+  Trước đó mình muốn đi qua một chút về mặt kĩ thuật của trang web này. Đây là một trang web tĩnh được xuất bằng framework [11ty (Eleventy)](https://www.11ty.dev). 11ty là một JS framework khá là nhẹ, đơn giản và tiện lợi. tính năng quan trọng nhất của nó là cho phép tác giả viết page bằng [Markdown](https://wikipedia.org/wiki/Markdown). Không chỉ thế nó còn có nhiều tính năng như tạo mục lục, quản lý tag... Điều này khá là lý tưởng cho một đứa tinker như mình.
+
+  Mình cũng đồng thời sử dụng [DaisyUI](https://daisyui.com) để style và [Alpine.js](https://alpinejs.dev) cho trang web có một chút tương tác. Mặc dù hiện tại Alpine.js có hơi overkill (thứ duy nhất cần nó là một cái hiệu ứng hover ảnh ở trang chủ):
+{% else %}
+  ## The technical
+
+  Before that, I wanted to show off a little bit about the technical side of this site. This is a static website generated using [11ty (Eleventy)](https://www.11ty.dev). 11ty is a light, simple and convenient JS framework. Its most important feature is that it allows the us to write the page in [Markdown](https://wikipedia.org/wiki/Markdown). Not only that, it also has many features such as creating a table of contents, tag manager... This is quite ideal for a tinker like me.
+
+  I also use [DaisyUI](https://daisyui.com) for styling and [Alpine.js](https://alpinejs.dev) for a bit of interactive. Although, Alpine.js is a bit overkill at the moment (the only thing that needs it is an image hover effect on the homepage):
+{% endif %}
+
+![Hover effect](https://i.imgur.com/KZ93WrH.webp)
+
+{% if lang == 'vi' %}
+  Nhưng trong tương lai mình có thể cho một số phần tương tác nhỏ trong một số bài viết.
+{% else %}
+  But in the future I can give a small interactive parts in some articles.
+{% endif %}
+
+{% if lang == 'vi' %}
+  ## Hỗ trợ đa ngôn ngữ
+
+  Lúc trước mình chỉ viết tiếng Anh vì là ở trên Github Wiki nhưng như bạn có thể thấy ở góc phải trên Navbar có một nút để thay đổi sang tiếng Anh, mình viết trang blog bằng cả tiếng Anh lẫn tiếng Việt! Từ nay mình sẽ viết blog bằng tiếng mẹ đẻ trước rồi dịch sang tiếng Anh. Mình khá tự tin về khả năng nghe/đọc của mình nhưng về viết lách thì vẫn rất rén, vì thế [LanguageTool](https://languagetool.org) (công cụ kiểm tra ngữ pháp mã nguồn mở) trở thành người bạn không thể thiếu đối với mình.
+
+  Một cách phổ biến để hỗ trợ đa ngôn ngữ trong 11ty là chia ra làm hai thư mục ngôn ngữ `en/` và `vi/`, cùng là một trang nhưng mỗi ngôn ngữ một file riêng đặt trong mỗi thư mục ngôn ngữ. Cách đấy cũng tạm ổn nhưng mình muốn linh hoạt hơn trong việc quản lý và tái sử dụng các thành phần của bài viết. Vậy nên mình để 11ty phân trang từng file markdown ra thành hai trang tiếng Anh (với `lang = 'en'`) và tiếng Việt (với `lang = 'vi'`) Xong mình chỉ việc viết blog trong một file như thế này:
+{% else %}
+  ## Support multi-language
+
+  Before, I only wrote in English because I wrote it on Github Wiki. But as you can see in the right corner of the Navbar there is a button to change to Vietnamese, I had blog in both English and Vietnamese! From now on, I will write in my native language first, then translate it to English. I'm quite confident about my English listening/reading skill, but I'm still a writing newbie, so [LanguageTool](https://languagetool.org) (an open source grammar checker) has become an indispensable tool for me.
+
+  The common way to support multi-language in 11ty is to split it into two directories `en/` and `vi/`, the same post has separate files of each language on each directory. That method is fine, but I want more flexibility in managing and reusing the elements of the article. So I let 11ty paginate each Markdown file into two pages in English (with `lang = 'en'`) and Vietnamese (with `lang = 'vi'`) so I can write in a single file like this:
+{% endif %}
+
+{% raw %}
+```liquid
+---
+title:
+  en: "*First post!"
+  vi: Blog post "đầu tiên"!
+description:
+  en: Made with 11ty
+  vi: Khai bút đầu năm bằng 11ty
+tags:
+  - update
+  - web_dev
+date: 2023-01-22
+image: https://images.unsplash.com/photo-1674240660273-a3496c4604fd
+---
+
+{% if lang == 'vi' %}
+  Xin chào!
+{% else %}
+  Hello!
+{% endif %}
+```
+{% endraw %}
+
+{% if lang == 'vi' %}
+  Và đó là tất cả, mình mong mọi người chờ đọc các bài blog tiếp theo của mình, hẹn gặp lại!
+{% else %}
+  That's all folks, I hope you all look forward to reading my next blog posts, bye!
+{% endif %}
