Added "Pick a web browser"

--- a/src/posts/2.md
+++ b/src/posts/2.md
@@ -5,8 +5,8 @@ title:
 description: 4E67-4E68-426E68
 tags:
   - tty
-image: https://i.imgur.com/F2yJyf8.webp
 date: 2023-01-24
+image: https://i.imgur.com/F2yJyf8.webp
 ---
 
 {% if lang == 'vi' %}
@@ -50,6 +50,7 @@ date: 2023-01-24
 ## [Tdfgo](https://github.com/digitallyserviced/tdfgo)
 
 > {% if lang == 'vi' %}
+>   Hiển thị chữ bằng font [TheDraw](https://en.wikipedia.org/wiki/TheDraw) trên terminal.
 > {% else %}
 >   [TheDraw](https://en.wikipedia.org/wiki/TheDraw) font parser and console text renderer.
 > {% endif %}
@@ -62,7 +63,13 @@ date: 2023-01-24
 {% else %}
   Some alternative:
 {% endif -%}
-[FIGlet](http://www.figlet.org), [TOIlet](http://caca.zoy.org/wiki/toilet), [Xero's fonts collection](https://github.com/xero/figlet-fonts).
+[FIGlet](http://www.figlet.org), [TOIlet](http://caca.zoy.org/wiki/toilet)
+{%- if lang == 'vi' %}
+  với
+{% else %}
+  with
+{% endif -%}
+[Xero's fonts collection](https://github.com/xero/figlet-fonts).
 
 ## [Btop](https://github.com/aristocratos/btop)
 
