modified:   src/_data/footer.yaml 	modified:   src/posts/4.md

--- a/src/posts/4.md
+++ b/src/posts/4.md
@@ -63,13 +63,13 @@ tool | cb
   ## File cài đặt
 
   Đừng bịa ra một định dạng hay một ngôn ngữ riêng để cài đặt:
-  - Nếu file cài đặt chỉ lưu trữ giá trị, hãy dùng JSON, TOML hoặc YAML. INI cũng được nhưng định dạng này có nhiệu hạn chế và nó không được sử dụng thông nhất cho lắm. Sử dụng định dạng phổ biến đương nhiên sẽ tốt hơn cho cả người phát triển lẫn người dùng. Các công cụ quản lý dotfiles như [Home Manager](https://github.com/nix-community/home-manager) cũng dễ dàng làm việc với các định dạng này hơn.
+  - Nếu file cài đặt chỉ lưu trữ giá trị, hãy dùng JSON, TOML, YAML hoặc [KDL](https://kdl.dev). INI cũng được nhưng định dạng này có nhiệu hạn chế và nó không được sử dụng thông nhất cho lắm. Sử dụng định dạng phổ biến đương nhiên sẽ tốt hơn cho cả người phát triển lẫn người dùng. Các công cụ quản lý dotfiles như [Home Manager](https://github.com/nix-community/home-manager) cũng dễ dàng làm việc với các định dạng này hơn.
   - Nếu nó cần scripting, hãy tạo ra một giao diện CLI để mọi ngôn ngữ có thể gọi nó. Hoặc tạo ra một thư viện hay API cho Lua, Python, Ruby... Đừng tạo ra một ngôn ngữ lập trình riêng chỉ để cài đặt công cụ của bạn vì ngôn ngữ đó kiểu gì cũng thiếu thốn, ọp ẹp hơn so với một ngôn ngữ lập trình hẳn hoi.
 {% else %}
   ## Configuration
 
   Don't invent a new format or new language just to config your tool:
-  - If the config file only stores values, use JSON, TOML, or YAML. INI is fine, but it has some limitations and is not implement consistently. Using a common format is of course better for both developers and users. Dotfiles management tools like Home Manager can also work with these formats easier.
+  - If the config file only stores values, use JSON, TOML, YAML or even [KDL](https://kdl.dev). INI is fine, but it has some limitations and is not implement consistently. Using a common format is of course better for both developers and users. Dotfiles management tools like Home Manager can also work with these formats easier.
   - If it needs scripting, create a CLI interface so any language can call it. Or create a library / API for Lua, Python, Ruby... Don't create a dedicate programming language just to config your tool because that language will most likely limited, janky and just never be as good or as flexible as some proper languages.
 {% endif %}
 
