modified:   src/posts/8.md

--- a/src/posts/8.md
+++ b/src/posts/8.md
@@ -9,109 +9,137 @@ image: https://images.unsplash.com/photo-1550501683-a99f0ff6b70f
 ---
 
 {% if lang == 'vi' %}
-  Danh sách các dự án mình drop. Cái thì đã xong, cái thì bỏ dở. Nhưng tất cả đều vô nghĩa hoặc mình không cảm thấy nó hưu dụng với bản thân nữa.
+  Danh sách các dự án mình drop. Cái thì đã xong, cái thì bỏ dở. Nhưng tất cả mình đều nhận ra nó vô nghĩa hoặc mình không cảm thấy nó hưu dụng với bản thân nữa.
 {% else %}
   List of projects I abandon. Some is finished, other left unfinished. But it's all pointless, or I don't feel it's useful to me anymore.
 {% endif %}
 
 ## {% if lang == 'vi' %}Công cụ{% else %}Utilities{% endif %}
 
-### [Terminal Explorer](https://github.com/NNBnh/terminal-explorer)
+<!-- ### [Terminal Explorer](https://github.com/NNBnh/terminal-explorer) -->
 
 <!-- {% if lang == 'vi' %}
-  TODO
+  - Mô tả:
+  - Lý do drop:
 {% else %}
-  TODO
+  - Description:
+  - Abandon reason:
 {% endif %} -->
 
 ### [Superb Bootstrap](https://github.com/NNBnh/superb-bootstrap)
 
-<!-- {% if lang == 'vi' %}
-  TODO
+{% if lang == 'vi' %}
+  - Mô tả: SuperB Bootstrap là một hệ thống bootstrap / dotfiles-manager có thể được cài đặt chỉ bằng một lệnh cho mọi hệ điều hành *NIX. Tính năng hàng đầu của nó là nó có thể chọn và cài đặt các gói từ các package managers có trên máy và thậm chí có thể cài thêm package managers nếu cần thiết.
+  - Lý do drop: Mặc dù tiện lợi, nhưng nó quá thiếu tin cậy, mình luôn cảm giác nó có thể làm sập cả hệ thống bất cứ lúc nào. Nhân tiện các giải pháp như [Nixpkgs](https://search.nixos.org/packages), [Brew](https://brew.sh) và [Flatpak](https://flatpak.org) đã tồn tại và kết hợp sử dụng nó ổn định hơn nhiều. Thậm chí tốt hơn: Các distros mới như [Vanilla OS](https://vanillaos.org) và [Blend OS](https://bleendos.co) thậm chí còn cho phép cài đặt các gói từ nhiều package managers của các distros khác.
 {% else %}
-  TODO
-{% endif %} -->
+  - Description: SuperB Bootstrap is a bootstrap-system/dotfiles-manager framework that can be installed with just one command on a new *NIX system installation. Its flagship feature it that it can pick and install packages from available package managers and can even install more package managers if necessary.
+  - Abandon reason: Although convenient, it's too unreliable. Also [Nixpkgs](https://search.nixos.org/packages), [Brew](https://brew.sh) and [Flatpak](https://flatpak.org) exist. Even better: New distros like [Vanilla OS](https://vanillaos.org) and [Blend OS](https://blendos.co) can even allow you to install packages from multiple package managers from different distro.
+{% endif %}
 
-### [Coderun](https://github.com/NNBnh/coderun)
-
-<!-- {% if lang == 'vi' %}
-  TODO
-{% else %}
-  TODO
-{% endif %} -->
-
-### [`clipb.kak`](https://github.com/NNBnh/clipb.kak)
+<!-- ### [Coderun](https://github.com/NNBnh/coderun) -->
 
 <!-- {% if lang == 'vi' %}
-  TODO
+  - Mô tả:
+  - Lý do drop:
 {% else %}
-  TODO
+  - Description:
+  - Abandon reason:
 {% endif %} -->
 
-### [MK](https://github.com/NNBnh/mk)
+<!-- ### [Clipb.kak](https://github.com/NNBnh/clipb.kak) -->
 
 <!-- {% if lang == 'vi' %}
-  TODO
+  - Mô tả:
+  - Lý do drop:
 {% else %}
-  TODO
+  - Description:
+  - Abandon reason:
 {% endif %} -->
 
-### [`hr`](https://github.com/NNBnh/hr)
+### [SuperB MK](https://github.com/NNBnh/mk)
 
-<!-- {% if lang == 'vi' %}
-  TODO
+{% if lang == 'vi' %}
+  - Mô tả: Một công cụ tạo tệp và thư mục, lấy cảm hứng từ [**Advanced New File**](https://github.com/tanrax/terminal-AdvancedNewFile).
+  - Lý do drop: Mình hiếm khi cần tạo nhiều thư mục và tệp với cấu trúc phức tạp. Nếu tôi cần một template, tôi sẽ khởi tạo nó bằng công cụ phù hợp hoặc chỉ cần copy template. Nhân tiện, bạn có thể setup text editor để nó tự động tạo thư mục mẹ nếu tệp được mở trên đường dẫn không tồn tại (vd: cài đặt `mkparents` trong Micro editor).
 {% else %}
-  TODO
-{% endif %} -->
+  - Description: Its a files and folders creation tool inspired by [**Advanced New File**](https://github.com/tanrax/terminal-AdvancedNewFile).
+  - Abandon reason: I rarely find myself needing to create multiple folders and files with complex structure. If I need a template, I just init it's using a proper tool, or copy a template from some repo. Also, you can setup your text editor so that it automatically create parent directories if a file is opened on a path that does not exist (e.g: `mkparents` options in Micro editor).
+{% endif %}
+
+### [SuperB HR](https://github.com/NNBnh/hr)
+
+{% if lang == 'vi' %}
+  - Mô tả: `<hr/>` cho terminal.
+  - Lý do drop: Cái này nó là shitpost hơn là một công cụ. Cứ nhét thằng cài hàm dưới đây vào config shell cho nó tiện:
+{% else %}
+  - Description: Horizontal ruler for terminal.
+  - Abandon reason: This more of a shitpost than anything. Just put this into your shell config:
+
+```bash
+hr() {
+  for text in "${@:-─}"; do
+    printf '\033[?7l%*s\033[?7h' "${COLUMNS:-$(tput cols)}" | sed -e "s/ /$text/g"
+  done
+}
+```
+
+{% endif %}
 
 ### [My Sed script collections](https://github.com/NNBnh/sed-collections)
 
-<!-- {% if lang == 'vi' %}
-  TODO
+{% if lang == 'vi' %}
+  - Mô tả: Đây là tập hợp các file Sed để giúp lọc văn bản.
+  - Lý do drop: Mình chưa bao giờ thật sự dùng nó cả, mình chỉ tạo nó chơi chơi vậy thôi...
 {% else %}
-  TODO
-{% endif %} -->
+  - Description: This is a collection of Sed scripts to help you filter text.
+  - Abandon reason: I never actually used it, I just made it for fun...
+{% endif %}
 
 ## Rice
 
-### [SuperB ST](https://github.com/NNBnh/superb-st)
+<!-- ### [SuperB ST](https://github.com/NNBnh/superb-st) -->
 
 <!-- {% if lang == 'vi' %}
-  TODO
+  - Mô tả:
+  - Lý do drop:
 {% else %}
-  TODO
+  - Description:
+  - Abandon reason:
 {% endif %} -->
 
 ### [Bmono](https://github.com/NNBnh/bmono)
 
-<!-- {% if lang == 'vi' %}
-  TODO
+{% if lang == 'vi' %}
+  - Mô tả: Mục tiêu của mình là tạo ra một phông chữ từ Iosevka mà sửa được [lỗi ligatures trên Kitty](https://github.com/be5invis/Iosevka/issues/1326) đi kèm với một số chỉnh sửa nhỏ để làm cho nó cá tính hơn.
+  - Lý do drop: Nhưng giờ [cái lỗi trên Kitty đã được sửa](https://github.com/be5invis/Iosevka/pull/1403) và bạn có thể chỉnh sửa phông chữ bằng cách sử dụng [stylistic sets/character variants](https://github.com /be5invis/Iosevka/issues/1376), mình không còn thấy mục đích của việc tạo và duy trình một phông chữ riêng cần thiết với mình nữa.
 {% else %}
-  TODO
-{% endif %} -->
+  - Description: My goal is to make a Iosevka font that fix the [ligatures on Kitty bug](https://github.com/be5invis/Iosevka/issues/1326) and come with some tiny tweak to make it slicker.
+  - Abandon reason: Now the [Kitty bug had been fixed](https://github.com/be5invis/Iosevka/pull/1403), and you can tweak the font by using [stylistic sets/character variants](https://github.com/be5invis/Iosevka/issues/1376), I no longer see the point of creating and maintaining a separate font.
+{% endif %}
 
 ### [Da One](https://github.com/NNBnh/da-one)
 
-<!-- {% if lang == 'vi' %}
-  TODO
+{% if lang == 'vi' %}
+  - Mô tả: Một color scheme rực rỡ nhưng vẫn duy trì sự hài hòa dễ chịu. Nó được thiết kế để hiển thị tốt trên terminal, nghĩa là tất cả các tông màu đều có màu bình thường và màu sáng.
+  - Lý do drop: [Catppuccin](https://github.com/catppuccin/catppuccin) tồn tại với mục tiêu y hệt nhưng nó tốt hơn gần như mọi mặt. Mình có thấy Catppuccin trong khi đang làm Da One, mình đã có thể dừng ngay lúc đấy nhưng ego của mình tăng tiến và cho rằng mình có thể làm tốt hơn Catppuccin (đấy là sai lầm).
 {% else %}
-  TODO
-{% endif %} -->
+  - Description: A color scheme that vibrant and distinct but still maintain a pleasant harmony. It's design to work with terminal, meaning all accents tone have normal and bright colors.
+  - Abandon reason: [Catppuccin](https://github.com/catppuccin/catppuccin) exist and it did exactly that but better. I saw Catppuccin when I was making Da One, I could just stop right away but I think I could make a better color scheme than Catppuccin (nope).
+{% endif %}
 
 ## {% if lang == 'vi' %}Khác{% else %}Other{% endif %}
 
 ### [Orange markup language](https://github.com/NNBnh/orml)
 
-<!-- {% if lang == 'vi' %}
-  TODO
+{% if lang == 'vi' %}
+  - Mô tả: Orange markup language là một ngôn ngữ markup lấy cảm hứng từ [PML](https://pml-lang.dev), được thiết kế để thay thế Markdown lẫn HTML.
+  - Lý do drop: Sau một thời gian, mình bắt đầu nhận ra là không một ai cần thêm một ngôn ngữ markup nữa:
+    - Cho các dev, HTML là lựa chọn tốt nhất vì syntax của HTML rất rõ ràng.
+    - Cho việc viết lách thông thường, Markdown và AsciiDoc là quá đủ rồi, đơn giản, có sự hỗ trợ từ mọi nền tảng và trang web.
 {% else %}
-  TODO
-{% endif %} -->
+  - Description: Orange markup language is an "original" markup language inspired by [PML](https://pml-lang.dev), design to replace both Markdown and HTML.
+  - Abandon reason: After a while I start to realize that maybe we don't need another markdown language anymore:
+    - For developer, HTML is the best choice because HTML's tags syntax is very clear.
+    - For causal writing usage, Markdown and AsciiDoc is good enough.
 
-### [Craft Everything](https://github.com/NNBnh/craft-everything)
-
-<!-- {% if lang == 'vi' %}
-  TODO
-{% else %}
-  TODO
-{% endif %} -->
+{% endif %}
