--- a/src/posts/8.md
+++ b/src/posts/8.md
@@ -4,7 +4,7 @@ title:
   vi: Nghĩa trang dự án
 tags:
   - story
-date: 2023-08-06
+date: 2023-08-07
 image: https://images.unsplash.com/photo-1550501683-a99f0ff6b70f
 ---
 
@@ -16,15 +16,17 @@ image: https://images.unsplash.com/photo-1550501683-a99f0ff6b70f
 
 ## {% if lang == 'vi' %}Công cụ{% else %}Utilities{% endif %}
 
-<!-- ### [Terminal Explorer](https://github.com/NNBnh/terminal-explorer) -->
+<!--
+### [Terminal Explorer](https://github.com/NNBnh/terminal-explorer)
 
-<!-- {% if lang == 'vi' %}
-  - Mô tả:
-  - Lý do drop:
+{% if lang == 'vi' %}
+  - Mô tả: Nó là một công cụ CLI giúp copy/cut/paste file tiện như trên các GUI app.
+  - Lý do drop: TODO
 {% else %}
-  - Description:
-  - Abandon reason:
-{% endif %} -->
+  - Description: It's a CLI tool that mimics the way GUI's file manager do copy/cut/paste.
+  - Abandon reason: TODO
+{% endif %}
+-->
 
 ### [Superb Bootstrap](https://github.com/NNBnh/superb-bootstrap)
 
@@ -36,25 +38,31 @@ image: https://images.unsplash.com/photo-1550501683-a99f0ff6b70f
   - Abandon reason: Although convenient, it's too unreliable. Also [Nixpkgs](https://search.nixos.org/packages), [Brew](https://brew.sh) and [Flatpak](https://flatpak.org) exist. Even better: New distros like [Vanilla OS](https://vanillaos.org) and [Blend OS](https://blendos.co) can even allow you to install packages from multiple package managers from different distro.
 {% endif %}
 
-<!-- ### [Coderun](https://github.com/NNBnh/coderun) -->
+### [Coderun](https://github.com/NNBnh/coderun)
 
-<!-- {% if lang == 'vi' %}
-  - Mô tả:
-  - Lý do drop:
+{% if lang == 'vi' %}
+  - Mô tả: Công cụ chạy code cho mọi ngôn ngữ lập trình. Nó nhận dạng ngôn ngữ lập trình từ đuôi của file và chạy file đó bằng lệnh phù hợp.
+  - Lý do drop: Bạn thà chạy file bằng cách gõ lệnh phù hợp vào shell luôn cho xong, thế linh hoạt và cũng chẳng chậm hơn mấy.
 {% else %}
-  - Description:
-  - Abandon reason:
-{% endif %} -->
+  - Description: Code runner CLI that can run any languages. It recognizes the programming language from the file's extension and runs the file with the appropriate command.
+  - Abandon reason: You'd rather run the file by typing the appropriate command into the shell, which is more flexible and not much slower.
+{% endif %}
 
-<!-- ### [Clipb.kak](https://github.com/NNBnh/clipb.kak) -->
+### [Clipb.kak](https://github.com/NNBnh/clipb.kak)
 
-<!-- {% if lang == 'vi' %}
-  - Mô tả:
-  - Lý do drop:
+{% if lang == 'vi' %}
+  - Mô tả: Plugin Hỗ trợ Clipboard cho Kakoune editor
+  - Lý do drop: Chỉ cần cài [Clipboard](https://getclipboard.app) và nhét đồng này vào `kakrc`:
 {% else %}
-  - Description:
-  - Abandon reason:
-{% endif %} -->
+  - Description: Clipboard managers warper for Kakoune editor
+  - Abandon reason: Just install [Clipboard](https://getclipboard.app) and add this to your `kakrc`:
+{% endif %}
+
+```
+hook -group 'clipboard' global WinCreate .* %{ evaluate-commands %sh{ printf '%s' 'set-register dquote %sh{ cb }' } }
+hook -group 'clipboard' global FocusIn   .* %{ evaluate-commands %sh{ printf '%s' 'set-register dquote %sh{ cb }' } }
+hook -group 'clipboard' global RegisterModified \" %{ nop %sh{ printf '%s' "$clipboard" | cb & } }
+```
 
 ### [SuperB MK](https://github.com/NNBnh/mk)
 
@@ -97,15 +105,39 @@ hr() {
 
 ## Rice
 
-<!-- ### [SuperB ST](https://github.com/NNBnh/superb-st) -->
+<!--
+### [SuperB ST](https://github.com/NNBnh/superb-st)
 
-<!-- {% if lang == 'vi' %}
-  - Mô tả:
-  - Lý do drop:
+{% if lang == 'vi' %}
+  - Mô tả: Terminal ST với vừa đủ patches.
+  - Lý do drop: TODO
 {% else %}
-  - Description:
-  - Abandon reason:
-{% endif %} -->
+  - Description: ST-base terminal with enough patches.
+  - Abandon reason: TODO
+{% endif %}
+-->
+
+### [SuperB UI](https://github.com/superb-ui)
+
+{% if lang == 'vi' %}
+  - Mô tả: Đó là một phương pháp quản lý colors management bằng environment variables để bất kỳ chương trình nào cũng có thể sử dụng nó.
+  - Lý do drop: Đấy là ý tưởng tồi tệ... Environment variables rất chậm, thiếu ổn định, một số ứng dụng / trường hợp khó đọc được nó. Hãy dùng [Tinted Theming](https://github.com/tinted-theming), [Wpgtk](https://github.com/deviantfero/wpgtk) hoặc [Pywal](https://github.com/dylanaraps/pywal).
+{% else %}
+  - Description: It's a UI and colors management method that export the colors hex through environment variables so any program that can read environment variables can use it.
+  - Abandon reason: That's a bad idea... Environment variables are very slow, unstable, some applications/cases hard to read it. Use [Tinted Theming](https://github.com/tinted-theming), [Wpgtk](https://github.com/deviantfero/wpgtk) or [Pywal](https://github.com/dylanaraps/pywal) instead.
+{% endif %}
+
+<!--
+### [DIYship](https://github.com/info-mono/diyship)
+
+{% if lang == 'vi' %}
+  - Mô tả: DIYship là một cross-shell prompt framework cho phép bạn tạo shell prompt bằng bất kỳ ngôn ngữ lập trình nào cho bất kỳ shell nào.
+  - Lý do drop: TODO
+{% else %}
+  - Description: DIYship is a cross-shell prompt framework that let you write your prompt with any programing language for any shell.
+  - Abandon reason: TODO
+{% endif %}
+-->
 
 ### [Bmono](https://github.com/NNBnh/bmono)
 
