--- a/src/posts/8.md
+++ b/src/posts/8.md
@@ -4,7 +4,8 @@ title:
   vi: Nghĩa trang dự án
 tags:
   - story
-date: 2023-08-07
+date: 2023-08-06
+updated: 2023-08-07
 image: https://images.unsplash.com/photo-1550501683-a99f0ff6b70f
 ---
 
