modified:   src/posts/10.md 	new file:   src/posts/11.md

--- a/src/posts/10.md
+++ b/src/posts/10.md
@@ -1,7 +1,8 @@
 ---
-title:
-  en: "Kera Desktop: The most innovative DE"
-  vi: "Kera Desktop: DE sáng tạo nhất!"
+title: Kera Desktop
+description:
+  en: The most innovative DE
+  vi: DE sáng tạo nhất!
 tags:
   - os_rice
 date: 2023-08-09
