--- a/src/posts/10.md
+++ b/src/posts/10.md
@@ -6,7 +6,7 @@ description:
 tags:
   - os_rice
 date: 2023-08-09
-image: https://images.unsplash.com/photo-1496782850948-d8e6bbe11a9f
+image: https://i.imgur.com/Ad1YsFW.webp
 ---
 
 {% if lang == 'vi' %}
@@ -27,7 +27,7 @@ image: https://images.unsplash.com/photo-1496782850948-d8e6bbe11a9f
 
 > **[Kera Desktop] Forget it, I just made my own desktop environment**
 
-![Kera Desktop](https://preview.redd.it/xvrqcj9sl05b1.png?width=960&crop=smart&auto=webp&s=14bae38781dd7744256970006b3deae5533cf887)
+![Kera Desktop](https://i.imgur.com/Ad1YsFW.webp)
 
 {% if lang == 'vi' %}
   [Kera Desktop](https://desktop.kerahq.com) là một DE độc lập, không chỉ thế nó còn lấy công nghệ web làm lõi! Càng đọc trang web của dụ án mình càng thấy nó có nhiều tính năng và ý tưởng hay như mình mong đợi!
