modified:   src/posts/11.md

--- a/src/posts/11.md
+++ b/src/posts/11.md
@@ -18,7 +18,7 @@ image: https://images.unsplash.com/photo-1621066063114-9a6cd3f1167b
   - Nó hiển thị nhãn của nhiều cửa sổ giúp ta phân biệt các ứng dụng đang mở giống nhau (như khi bạn mở một loạt tệp tin trông na ná nhau).
   - Nó khiến dùng chuột tương tác với cửa sổ (kéo thả, tắt, ẩn ...) dễ hơn.
 
-  Nhưng cách tốt nhất để hiển thị nhãn của sổ là gì, chúng ta hãy xem qua một số giải pháp.
+  Nhưng cách tốt nhất để hiển thị nhãn của sổ là gì, chúng ta hãy xem qua một số phương pháp.
 {% else %}
   Window's title is the most underrated aspect of a desktop when in fact it's very useful:
 
@@ -32,19 +32,21 @@ image: https://images.unsplash.com/photo-1621066063114-9a6cd3f1167b
 {% if lang == 'vi' %}
   ## Làm rõ một số định nghĩa
 
-  TODO
+  - Busy workspace: Workspace có split layout container là phần tử con đầu tiên của nó.
+  - Tabs workspace: Workspace có tabs layout container là phần tử con đầu tiên của nó. vì mình bật `smart_gaps on` nên tabs workspace sẽ không có gaps.
+  - Bar: (Thường được gọi là taskbar) sẽ được gọi là thanh thông tin trong bài viết này.
 {% else %}
   ## Key terms
 
-  - Busy workspace: a workspace that have split layout container as it's first child.
-  - Tabs workspace: a workspace that have tabs layout container as it's first child. Because I turn `smart_gaps on` so a tabs workspace will not have gaps.
-  - The bar: (usually called taskbar) will be refer as information bar.
+  - Busy workspace: Workspace that have split layout container as it's first child.
+  - Tabs workspace: Workspace that have tabs layout container as it's first child. Because I turn `smart_gaps on` so a tabs workspace will not have gaps.
+  - The bar: (Usually called taskbar) will be refer as information bar.
 {% endif %}
 
 {% if lang == 'vi' %}
   ## Truyền thống
 
-  TODO
+  Đây là phương pháp đang được sử dụng trong Windows và hầu hết DE trên Linux, nhãn cửa sổ hiển thị được gắn vào chính cửa sổ đó và cũng hiển thị danh sách các cửa sổ đó trên thanh thông tin.
 {% else %}
   ## Legacy
 
@@ -58,15 +60,17 @@ image: https://images.unsplash.com/photo-1621066063114-9a6cd3f1167b
 {% if lang == 'vi' %}
   ### Lợi ích
 
-  TODO
+  - Đây là thiết kế cũ mà hầu hết mọi người đã quen thuộc.
 
   ### Hạn chế
 
-  TODO
+  - Thiết kế này đã lỗi thời:
+    - Hiển thị nhãn cửa sổ ở hai nơi khá là dư thừa.
+    - Và làm cho màn hình trở nên chật chội hơn.
 
   ### Khắc phục
 
-  TODO
+  - Hãy dùng phương pháp khác...
 {% else %}
   ### Pro
 
@@ -86,7 +90,7 @@ image: https://images.unsplash.com/photo-1621066063114-9a6cd3f1167b
 {% if lang == 'vi' %}
   ## Tách biệt
 
-  TODO
+  Chỉ hiển thị danh sách các cửa sổ trên thanh thông tin.
 {% else %}
   ## Detach
 
@@ -100,37 +104,41 @@ image: https://images.unsplash.com/photo-1621066063114-9a6cd3f1167b
 {% if lang == 'vi' %}
   ### Lợi ích
 
-  TODO
+  - Phương pháp này là phương pháp ít tốn diện tích màn hình nhất.
+  - Và vẫn có thể hiển thị các thông tin: Nó tối hơn phương pháp _Gắn liền_ trong tabs workspace vì nó còn hiển thị thêm các thông tin khác như workspaces và đồng hồ...
 
   ### Hạn chế
 
-  TODO
+  - Vấn đề là cách thông tin được hiển thị, một danh sách các cửa sổ có thể cho bạn biết có bao nhiêu cửa sổ và tên của chúng nhưng không hiển thị vị trí của chúng, vì vậy bạn sẽ không biết nhãn nào tương ứng với cửa sổ nào... Điều này phần nào làm mất đi mục đích của nhãn.
+  - Bạn thậm chí không thể biết container có tabs hay không.
+  - Dùng chuột để tương tác với cửa sổ (kéo và di chuyển cửa sổ xung quanh) sẽ khó chịu hơn.
+  - Những nhãn cửa sổ đó có thể chiếm nhiều không gian trong thanh thông tin, không gian có thể được sử dụng để hiển thị `CPU`, `MEM`, `DISK`, `TEMP`, `PLAYING`...
 
   ### Khắc phục
 
-  TODO
+  - "Bạn thậm chí không thể biết container có tabs hay không": Bạn có thể để container hiển thị nhãn nếu nó có tabs nhưng hiển thị nhãn ở hai vị trí khá là thừa thãi...
 {% else %}
   ### Pro
 
   - This method give you the biggest screen real estate.
-  - And still shows you all the information, this is better than the _Attach method_ in tabs workspace because it can even show additional information (workspaces and clock).
+  - And still shows you all the information: This is better than the _Attach method_ in tabs workspace because it can even show additional information (workspaces and clock).
 
   ### Con
 
   - The problem is the way the information is presented, a list of title can show you how many windows and their name but not their location, so you end up confusing not knowing which title is correspond to which window... This defeat the whole purpose of display title for each window.
-  - you can't even tell if the container have tabs or not.
+  - You can't even tell if the container have tabs or not.
   - It's hard for mouse user to interact with a window (drag and move window around).
   - Those titles can take a lot of space in the information bar, space that can be used to display `CPU`, `MEM`, `DISK`, `TEMP`, `PLAYING`...
 
   ### Fix
 
-  - _"you can't even tell if the container have tabs or not"_: You can make a container show title bar if it's has tabs but this is redundant to show title in two place.
+  - "you can't even tell if the container have tabs or not": You can make a container show title bar if it's has tabs but this is redundant to show title in two place.
 {% endif %}
 
 {% if lang == 'vi' %}
   ## Gắn liền
 
-  TODO
+  Gắn liền nhãn với cửa sổ.
 {% else %}
   ## Attach
 
@@ -232,20 +240,27 @@ image: https://images.unsplash.com/photo-1621066063114-9a6cd3f1167b
 {% if lang == 'vi' %}
   ## Kết luận
 
-  TODO
+  <div class="overflow-x-auto whitespace-nowrap">
+
+  | Method           | Busy workspace             | Tabs workspace |
+  | ---------------- | -------------------------- | -------------- |
+  | **Truyền thống** | Chật chội                  | Chật chội      |
+  | **Tách biệt**    | Khó dùng                   | Tốt            |
+  | **Gắn liền**     | Tốt                        | Ỏn             |
+  | **Linh hoạt**    | Tốt (tốt nhất khi có gaps) | Tốt            |
+
+  </div>
 {% else %}
   ## Conclusion
 
-  After considering all the methods we conclude as follows:
-
   <div class="overflow-x-auto whitespace-nowrap">
 
-  |      Method | Busy workspace           | Tabs workspace | Information bar                      | Recommend |
-  | ----------: | ------------------------ | -------------- | ------------------------------------ | --------- |
-  |    **Both** | Cramped                  | Cramped        | Show                                 | Meh       |
-  |  **Detach** | Confuse                  | Best           | Show                                 | No        |
-  |  **Attach** | Good                     | Okay           | Auto hide to save screen real estate | Yes       |
-  | **Dynamic** | Good (best if have gaps) | Best           | Show                                 | Yes       |
+  | Method      | Busy workspace           | Tabs workspace |
+  | ----------- | ------------------------ | -------------- |
+  | **Legacy**  | Cramped                  | Cramped        |
+  | **Detach**  | Confuse                  | Best           |
+  | **Attach**  | Good                     | Okay           |
+  | **Dynamic** | Good (best if have gaps) | Best           |
 
   </div>
 {% endif %}
