modified:   src/posts/11.md

--- a/src/posts/11.md
+++ b/src/posts/11.md
@@ -105,7 +105,7 @@ image: https://images.unsplash.com/photo-1621066063114-9a6cd3f1167b
   ### Lợi ích
 
   - Phương pháp này là phương pháp ít tốn diện tích màn hình nhất.
-  - Và vẫn có thể hiển thị các thông tin: Nó tối hơn phương pháp _Gắn liền_ trong tabs workspace vì nó còn hiển thị thêm các thông tin khác như workspaces và đồng hồ...
+  - Và vẫn có thể hiển thị các thông tin: Nó tối hơn _phương pháp Gắn liền_ trong tabs workspace vì nó còn hiển thị thêm các thông tin khác như workspaces và đồng hồ...
 
   ### Hạn chế
 
@@ -152,34 +152,41 @@ image: https://images.unsplash.com/photo-1621066063114-9a6cd3f1167b
 {% if lang == 'vi' %}
   ### Lợi ích
 
-  TODO
+  - Mọi thứ đều đơn giản và rõ ràng, bạn biết chính xác nhãn nào tương ứng với cửa sổ nào.
+  - Nó khiến dùng chuột tương tác với cửa sổ (kéo thả, tắt, ẩn ...) dễ hơn.
+  - Nếu bạn có thanh thông tin, phương pháp này để lại nhiều không gian cho thanh thông tin hơn so với _phương pháp Tách biệt_.
 
   ### Hạn chế
 
-  TODO
+  - Phương pháp này tốn diện tích hơn _phương pháp Tách biệt_ trong một số trường hợp vd: Trong busy workspace, ta có thể thấy thanh nhãn của hầu hết các cửa sổ nằm phía trên màn hình nhưng như nhãn của `win4` (trong ảnh) chiếm thêm diện tích ở giữa màn hình không như _phương pháp Tách biệt_.
+  - Nếu bạn có thanh thông tin, phương pháp này chiếm nhiều diện tích như _phương pháp Truyền thống_ nhưng đống diện tích đấy co thể được sử dụng một cách hiệu quả hơn.
 
   ### Khắc phục
 
-  TODO
+  - Về vấn đề diện tích màn hình:
+    - Bạn có thể ẩn thanh thông tin và chỉ hiển thị khi giữ phím <kbd class="kbd">Super</kbd> như [thế này](https://user-images.githubusercontent.com/43980777/108533634-c57bee00-730b-11eb-9b18-f17b3ca91ce6.mp4).
+    - Hoặc chỉ hiển thị nó khi chuyển workspace.
+    - Hoặc dùng hot corner...
+  - Tự động ẩn thanh thông tin có thể mang lại một không gian làm việc rõ ràng và tập trung nhưng điều này cũng có thể gây bất tiện. Tất cả những vấn đề này có thể được giải quyết thông qua phương pháp cuối cùng.
 {% else %}
   ### Pro
 
-  - Everything is simple and clear, you know exactly which title is correspond to which window :).
+  - Everything is simple and clear, you know exactly which title is correspond to which window.
   - It's easy for mouse user to interact with a window (drag and move window around).
   - If you have an information bar, this method leave more space to the information bar than _Detach method_.
 
   ### Con
 
-  - This method take a bit more screen real estate than _Detach method_ in specific conditions (in the busy workspace, you can see most window's title bar just sit on the top of the screen but `win4`'s title bar take space in the middle of the screen unlike _Detach method_, a list of all windows just sit on the information bar).
+  - This method take a bit more screen real estate than _Detach method_ in specific conditions e.g: In the busy workspace, you can see most window's title bar just sit on the top of the screen but `win4`'s title bar (on image) take more space in the middle of the screen unlike _Detach method_.
   - If you have an information bar, this method will take as much screen real estate as _legacy method_ although that space is used more efficiently.
 
   ### Fix
 
   - About the screen real estate issue:
-    - You can hide the information bar and only show it when holding the <kbd>Super</kbd> key like [this workflow](https://user-images.githubusercontent.com/43980777/108533634-c57bee00-730b-11eb-9b18-f17b3ca91ce6.mp4).
+    - You can hide the information bar and only show it when holding the <kbd class="kbd">Super</kbd> key like [this](https://user-images.githubusercontent.com/43980777/108533634-c57bee00-730b-11eb-9b18-f17b3ca91ce6.mp4).
     - Or only show it when user switch workspace.
     - Make a hot corner for mouse user...
-  - Auto hide the information bar can give user a clean and focus desktop but for some this is inconvenient. All of these problems can be solved through the [fourth method](#dynamic).
+  - Auto hide the information bar can give user a clean and focus desktop but for some this is inconvenient. All of these problems can be solved through the last method.
 {% endif %}
 
 {% if lang == 'vi' %}
